styles/style.css
/* Здесь вы напишете основную часть стилей страницы.

Будьте внимательны! Для корректной работы скриптов на этом сайте нужно, чтобы в HTML некоторые классы были названы особым образом:
✦ theme-dark — класс тёмной темы
✦ theme-light — класс светлой темы
✦ like-icon — для svg-иконки анимированного сердца
✦ card__like-button — для кнопки Like рядом с иконкой
✦ card__icon-button — для кнопки, оборачивающей иконку
✦ card__icon-button — для кнопки, оборачивающей иконку
✦ is-liked — для обозначения состояния лайкнутой иконки в виде сердца
✦ button__text — для обозначения текстового элемента внутри кнопки

Кроме этого, не меняйте HTML переключателя тем. Его разметка также гарантирует работу своего скрипта.

*/

.page {
  min-inline-size: 320px;
  max-inline-size:  696px;
  margin-inline: auto;
  min-block-size: 100%;
  font-family: var(--main-font);
  font-variation-settings: "wght" var(--font-wdht);
  color: var(--theme-color);
  background-color: var(--theme-background);
  background-image: var(--theme-background-image);
  background-size: cover;
  background-attachment: fixed;
}

.header {
  margin-block: 102px;
  background-color: var(--theme-background);
  border: 2px solid var(--theme-color);
}

.header__logo {
  display: block;
  text-decoration: none;
  margin-block-start: clamp(120px, 30%, 136px);
  text-align: center;
  color: inherit;
  font-family: var(--accent-font);
  font-weight: 400;
  font-size: clamp(3.0625rem, 1.8943rem + 4.9844vw, 4.0625rem);
  text-transform: uppercase;
}

.header__title {
  margin-block-start: 20px;
  font-family: var(--accent-font);
  font-size: clamp(0.875rem, 0.2179rem + 2.8037vw, 1.4375rem);
  text-align: center;
  text-transform: uppercase;
}

.theme-menu {
  display: flex;
  justify-content: center;
}

.header__theme-menu {
  margin-block: 25px;
  margin-inline-start: 20px;
}

.theme-menu__list {
  display: inherit;
  flex-direction: column;
  gap: 5px;
}

.theme-menu__item {
  position: relative;
}

.theme-menu__button {
  color: inherit;
  font-family: var(--accent-font);
  font-weight: var(--font-wdht);
  font-size: 14px;
  text-transform: uppercase;
  padding-block: 0;
  padding-inline: 0;
  background: none;
  border: none;
  transition: opacity 0.3s;
  position: relative;
}

.theme-menu__button::after {
  content: '';
  display: block;
  height: 3px;
  background-color: var(--theme-color);
  transition: opacity 0.3s ease, scale 0.3s ease; /*fix focus*/
  transform-origin: left;
  scale: 0;  
}

.theme-menu__button:hover {
  cursor: pointer;
  opacity: 0.6;
}

.theme-menu__button:hover::after {
  width: 100%;
}

.theme-menu__button:disabled {
  pointer-events: none;
  opacity: 0.6;
}

.theme-menu__button:disabled::before {
  position: absolute;
  display: inline;
  content: "▶";
  animation: arrow 0.5s infinite alternate ease-in-out;
}

.theme-menu__button:focus {
  outline: none;
}

.theme-menu__button:focus-visible {
  outline: none;
  opacity: 0.6;
}

.theme-menu__button:focus-visible::after {
  opacity: 0.6;
  scale: 1
}

.card {
  background: var(--theme-background);
  margin-block-end: 50px;
}

.card__title {
  border: 2px solid var(--theme-color);
  border-bottom-width: 1px;
  color: var(--theme-color, #000);
  font-family: var(--main-font);
  font-weight: var(--font-wdht-bold);
  font-variation-settings: "wght" var(--font-wdht-bold);
  font-size: 18px;
  font-style: normal;
  line-height: normal;
  padding: 4px 10px;
}

.card__image {
  border: 2px solid var(--theme-color);
  border-top-width: 1px;
  border-bottom-width: 1px;
  position: relative;
}

.label {
  position: absolute;
  top: 25px;
  right: clamp(11px, 30%, 25px);
  opacity: 0.5;
  mix-blend-mode: hard-light;
  font-family: var(--accent-font);
  font-size: 14px;
  text-shadow: 0 -1px var(--theme-background), 1px 0 var(--theme-background), 0 1px var(--theme-background), -1px 0 var(--theme-background);
  /*fix text-transform*/
}

@supports (text-stroke: 1px var(--theme-background)) or (-webkit-text-stroke: 1px var(--theme-background)) {
  .label {    
    text-stroke: 1px var(--theme-background);
    -webkit-text-stroke: 1px var(--theme-background);
    text-shadow: none;
  }
}

.image {
  display: block;
  inline-size: 100%;
  object-fit: cover;
  object-position: right 0px;
}

.image-grayscale {
  filter: grayscale(80%);
}

.image-contrast {
  filter: contrast(400%);
}

.image-hue-rotate {
  filter: hue-rotate(0.1turn);
}

.image-invert {
  filter: invert(80%);;
}

.image-sepia {
  filter: sepia(1);
}

.image-blur {
  filter: blur(15px);
}

.image-multi {
  filter: hue-rotate(0.25turn) contrast(50%) brightness(130%) blur(2px);
}

.card__content {
  border: 2px solid var(--theme-color);
}

.card__text {
  margin: 25px 25px 27px 25px;
  font-size: 18px;
  line-height: 21px;
}

.card__text:last-of-type {
  margin-block-end: 0;
}

.card__like-section {
  display: flex;
  justify-content: end;
  padding: 0 25px 20px;
  margin-block-start: 25px; /*fix margin*/
}

.button {
  padding: 7px 17px;
  position: relative;
  border: 2px solid var(--theme-color);
  background: var(--theme-background);
  cursor: pointer;
  transition: box-shadow 0.3s;
}

.button:focus {
  outline: none;
  box-shadow: 2px 2px var(--theme-color);
}

.button::after {
  position: absolute;
  content: '';
  display: block;
  inset: 0;
  width: 0%;
  height: 100%;
  background-color: var(--theme-color);
  transition: width 0.5s ease-in-out;
}

.button:hover {
  color: var(--theme-background);
}

.button:hover::after {
  width: 100%;
}

.button__text {
  position: relative;
  font-family: var(--accent-font);
  font-size: 14px;
  font-weight: var(--normal-font);
  line-height: 90%;
  z-index: 20;
  color: inherit;
}

.card__icon-button {
  cursor: pointer;
  padding: 0;
  border: 2px solid transparent;
  display: flex;
  justify-content: center;
  align-items: center;
  margin-inline-end: 6px;
  padding: 0;
  background-color: transparent;
  transition: border 0.3s;
  block-size: 38px;
}

.card__icon-button:focus {
  outline: none;
}

.card__icon-button:focus-visible {
  border: 2px solid var(--theme-color);
}

.card__like-button {
  min-inline-size: 130px;
  block-size: 38px;
}

.button__save {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 8px;
  padding: 15px 20px;
  margin: auto auto 100px auto;
}

.button__icon {
  width: 21px;
  height: 21px;
  color: var(--theme-color);
}

.dialog {
  display: grid;
  align-items: center;
  grid-template-columns: min-content auto;
  gap: 30px 20px;
  position: fixed;
  inset: 0;
  padding: 30px;
  background-color: var(--theme-background);
  border: 2px solid var(--theme-color);
}

.dialog::backdrop {
  background-color: rgb(0 0 0 / 75%);
}

.dialog:not([open]) {
  pointer-events: none;
  opacity: 0;
}

.dialog__icon {
  width: 39px;
  height: 39px;
  color: var(--theme-color);
}

.dialog__title {
  max-inline-size: 234px;
  color: var(--theme-color);
  font-family: var(--accent-font);
  font-size: 14px;
  line-height: 150%;
  font-weight: var(--font-wdht);  
  text-transform: uppercase;
}

.dialog__button {
  grid-column: span 2;
  color: var(--theme-color);
}

.dialog__button .button__text {
  text-transform: uppercase;
}

@media (width <= 375px) {
  .button__save {
    flex-direction: column;
  }

  .button__icon {
    width: 28px;
    height: 28px;
  }
}

